<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.RegisterActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Sing up"
        android:textAlignment="center"
        android:textSize="50sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editNombre"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:hint="@string/hint_nombre"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editApellido"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:hint="@string/hint_apellido"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editEdad"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:hint="@string/hint_edad"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editUsuario"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:hint="@string/hint_usuario"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editPassword1"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:hint="@string/hint_password"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editPassword2"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:hint="@string/hint_password"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtMessage"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textColor="@color/colorAccent"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_singUp"
        android:background="@color/colorButton"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:id="@+id/btnSingUp"
        android:onClick="singUp"/>

</LinearLayout>